--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
 
         <iframe width="80%" height="300px" src="https://www.pesuacademy.com/Academy/sessionExpired" frameborder="0"></iframe>
 
+    <br>
+
+        <p>
+            Check out the game I created!
+        </p>
+
+        <a target="_blank" href="file:///C:/Users/samar/OneDrive/Desktop/Samarth/PES/4th%20Semester/Game%20Design-II/CatKiller.html">CatKiller</a>
+
     <hr>
         <p style="color:rgb(21, 38, 56)">Find me on Instagram and Behance!</p>
 
