--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             Check out the game I created!
         </p>
 
-        <a target="_blank" href="file:///C:/Users/samar/OneDrive/Desktop/Samarth/PES/4th%20Semester/Game%20Design-II/CatKiller.html">CatKiller</a>
+        <a target="_blank" href="CatKiller.html">CatKiller</a>
 
     <hr>
         <p style="color:rgb(21, 38, 56)">Find me on Instagram and Behance!</p>
