--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             Check out the game I created!
         </p>
 
-        <a target="_blank" href="CatKiller.html">CatKiller</a>
+        <a target="_blank" href="Scratch 3.0 is here!.html">CatKiller</a>
 
     <hr>
         <p style="color:rgb(21, 38, 56)">Find me on Instagram and Behance!</p>
